fix: Navbar z-index

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -13,6 +13,8 @@
     background-color: $white;
     box-shadow: 0 -2px 0 rgba($black, 0.25);
 
+    z-index: 9999;
+
     & .desktop {
         display: none;
     }
